[tool.poetry]
name = "origamibot"
version = "3.0.0"
description = "Library for creating bots for telegram with Python."
authors = ["Crystal Melting Dot <stresspassing@gmail.com>"]
license = "LGPL-3.0-only"
repository = 'https://github.com/cmd410/OrigamiBot'
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.18.2"
yarl = "^1.6.3"
pydantic = "^1.8.2"
orjson = "^3.5.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
python-dotenv = "^0.18.0"
flake8 = "^3.9.2"
pytest-order = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
