[tool.poetry]
name = "origamibot"
version = "2.3.1"
description = "Library for creating bots for telegram with Python."
authors = ["Crystal Melting Dot <stresspassing@gmail.com>"]
license = "MIT"
repository = 'https://github.com/cmd410/OrigamiBot'
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
telegram-text = { version = "^0.1.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
python-dotenv = "^0.18.0"
pytest-ordering = "^0.6"

[tool.poetry.extras]
telegram-text = ["telegram-text"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
